--- a/电影卡.html
+++ b/电影卡.html
@@ -13,7 +13,7 @@
       background-color: rgb(253, 252, 252);
     }
     .box {
-      box-shadow: 0px 5px 15px rgba(71, 46, 46, 0.3);
+      box-shadow: 0px 5px 15px rsgba(71, 46, 46, 0.3);
       width: 300px;
       /* 不设置高度，让内容自然撑开 */
       /* 设置容器居中 */
