--- a/旋转魔方.html
+++ b/旋转魔方.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./样式重置/reset.css">
   <style>
     html {
-      perspective: 800px;
+      /* perspective: 8000px; */
       background-color: black;
     }
     .box {
@@ -29,6 +29,10 @@
     }
     img {
       vertical-align: top;
+    }
+    img {
+      width: 250px;
+      height: 250px;
     }
 /* 第一个 */
     .first,.first-1 {
@@ -95,51 +99,51 @@
   <div class="box">
     <!--让两张图片重叠，一张用来构建魔方，一张用来做hover效果  -->
     <div class="first">
-      <img src="./img/魔方图片/01.png" alt="">
+      <img src="./img/魔方图片/01-1.png" alt="">
     </div>
 
     <div class="second">
-      <img src="./img/魔方图片/02.png" alt="">
+      <img src="./img/魔方图片/02-2.png" alt="">
     </div>
 
     <div class="third">
-      <img src="./img/魔方图片/03.png" alt="">
+      <img src="./img/魔方图片/03-3.png" alt="">
     </div>
 
     <div class="fourth">
-      <img src="./img/魔方图片/04.png" alt="">
+      <img src="./img/魔方图片/04-4.png" alt="">
     </div>
 
     <div class="fifth">
-      <img src="./img/魔方图片/05.png" alt="">
+      <img src="./img/魔方图片/05-5.png" alt="">
     </div>
 
     <div class="sixth">
-      <img src="./img/魔方图片/06.png" alt="">
+      <img src="./img/魔方图片/06-6.png" alt="">
     </div>
 
     <div class="first-1">
-      <img src="./img/魔方图片/01.png" alt="">
+      <img src="./img/魔方图片/01-1.png" alt="">
     </div>
 
     <div class="second-2">
-      <img src="./img/魔方图片/02.png" alt="">
+      <img src="./img/魔方图片/02-2.png" alt="">
     </div>
 
     <div class="third-3">
-      <img src="./img/魔方图片/03.png" alt="">
+      <img src="./img/魔方图片/03-3.png" alt="">
     </div>
 
     <div class="fourth-4">
-      <img src="./img/魔方图片/04.png" alt="">
+      <img src="./img/魔方图片/04-4.png" alt="">
     </div>
 
     <div class="fifth-5">
-      <img src="./img/魔方图片/05.png" alt="">
+      <img src="./img/魔方图片/05-5.png" alt="">
     </div>
 
     <div class="sixth-6">
-      <img src="./img/魔方图片/06.png" alt="">
+      <img src="./img/魔方图片/06-6.png" alt="">
     </div>
 
   </div>
