--- a/Practice.html
+++ b/Practice.html
@@ -5,22 +5,66 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
-
   <title>Document</title>
+  <style>
+
+span {
+    position: relative;
+}
+.Checkbox {
+    position: absolute;
+    visibility: hidden;
+}
+.Checkbox+label {
+    position:absolute;
+    width: 16px;
+    height: 16px;
+    border: 1px solid #A6A6A6;
+    border-radius: 50%;
+    background-color:#006EFF;
+} 
+.Checkbox:checked+label:after {
+    content: "";
+    position: absolute;
+    left: 2px;
+    top:2px;
+    width: 9px;
+    height: 4px;
+    border: 2px solid #fff;
+    border-top-color: transparent;
+    border-right-color: transparent; 
+    transform: rotate(-45deg);
+    -ms-transform: rotate(-60deg);
+    -moz-transform: rotate(-60deg);
+    -webkit-transform: rotate(-60deg);
+}
+  </style>
 </head>
 <body>
-  <script>
-    // 定义检查数据类型的函数
-    function check(item) {
-      return Object.prototype.toString.call(item).slice(8, -1)
-      // 不要slice则会输出[object Object]
-    }
-    let a = {name:'piyaunxing'}
-    let b = [1,2]
-    // check(a)
-    console.log(check(a))
-    console.log(check(b))
-  </script>
+  <button class="btn">点击</button><hr>
+  <button class="btn">点击2</button>
+  <!-- <span>
+    <input type="checkbox"class="Checkbox" id="check1">
+    <label for="check1"></label>
+</span> -->
+<input type="checkbox" name="" id="">
+<script>
+let a = 0.1
+let b = '1'
+let c = 0.1
+console.log(a+b);
+let num = a + c
+console.log(num);
+
+
+var ele = document.getElementsByClassName('btn')
+console.log(ele);
+for (var i = 0; i < Array.from(ele).length; i++) {
+    var element = ele[i];
+    addEventListener(element, 'click', function () {
+      console.log(i);
+    });
+}
+</script>
 </body>
 </html>
